<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.mobius.software.android.iotbroker.main.activity.SendMessageActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:gravity="center|fill_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <ImageView
                android:id="@+id/img_content"
                android:layout_width="30.00dp"
                android:layout_height="30dp"
                android:contentDescription="@string/sm_content_description"
                android:src="@drawable/sm_content_icon" />

            <TextView
                android:id="@+id/lbl_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|end"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:labelFor="@+id/tbx_content"
                android:text="@string/sm_lbl_content" />

            <EditText
                android:id="@+id/tbx_content"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|end"
                android:layout_weight="4"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:inputType="none"
                android:minWidth=" 192.67dp"
                android:onClick="showAddContent" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d9e1e3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <ImageView
                android:id="@+id/img_topic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/sm_toipic_description"
                android:src="@drawable/sm_topic_icon" />

            <TextView
                android:id="@+id/lbl_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|end"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:labelFor="@+id/tbx_topic"
                android:text="@string/sm_lbl_topic" />

            <EditText
                android:id="@+id/tbx_topic"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="text"
                android:minWidth="192dp" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d9e1e3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <ImageView
                android:id="@+id/img_qos"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/sm_qos_description"
                android:src="@drawable/sm_qos_icon" />

            <TextView
                android:id="@+id/lbl_qos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|end"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:labelFor="@+id/spnr_qos"
                android:text="@string/sm_lbl_qos" />

            <Spinner
                android:id="@+id/spnr_qos"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="5"
                android:ems="10"
                android:entries="@array/qos_array"
                android:minWidth=" 192dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d9e1e3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d9e1e3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <ImageView
                android:id="@+id/img_retain"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/sm_retain_description"
                android:src="@drawable/sm_retain_icon" />

            <TextView
                android:id="@+id/lbl_retain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|end"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:labelFor="@+id/swtr_retain"
                android:text="@string/sm_lbl_retain" />

            <Switch
                android:id="@+id/swtr_retain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="2"
                android:gravity="center"
                android:textColorLink="#4fd262"
                android:textStyle="normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d9e1e3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <ImageView
                android:id="@+id/imgwill"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/sm_dublicate_description"
                android:src="@drawable/sm_dublicate_icon" />

            <TextView
                android:id="@+id/lbl_dublicate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|end"
                android:layout_marginStart="16dp"
                android:labelFor="@+id/swtch_dublicate"
                android:text="@string/sm_lbl_dublicate" />

            <Switch
                android:id="@+id/swtch_dublicate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="5"
                android:textColorLink="#4fd262"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff" />

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"    
        android:background="#19a3dc"
        android:minHeight="73.33dp"
        android:text="@string/sm__btn_send_text"
        android:textColor="#fff"
        android:textStyle="bold" />

</RelativeLayout>